# graphSAST

./: .dockerignore  .gitignore  Dockerfile  GraphSAST_Full_Plan.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements-bedrock.txt  requirements-claude.txt  requirements-dev.txt  requirements-openai.txt  requirements.txt
docs/: adding-language-support.md  config.toml.example
graphsast/: config.py
graphsast/analysis/: __init__.py  analyst.py  dedup.py  describer.py  hunter.py  models.py  scanner.py  semgrep.py  store.py  vuln_context.py
graphsast/analysis/phase2/: __init__.py  semgrep_runner.py  structure.py  taint_queries.py
graphsast/analysis/phase3/: __init__.py  correlator.py  llm_merge.py  reachability.py
graphsast/cli/: _render.py  main.py
graphsast/graph/: client.py
graphsast/graph_db/: migrations.py  store.py
graphsast/ingestion/: arg_inspector.py  missing_edges.py  pipeline.py  taint_markers.py
graphsast/llm/: __init__.py  base.py  bedrock_client.py  cache.py  claude_client.py  factory.py  ollama_client.py  openai_client.py  phase1a.py  phase1b.py  tools.py
graphsast/mcp/: tools.py
graphsast/output/: __init__.py  json_report.py  markdown.py  sarif.py
graphsast/vuln_db/: loader.py  schema.py  store.py
graphsast/vuln_db/importers/: __init__.py  builtin_lang_rules.py  custom.py  lang_sigs.py  owasp_wstg.py  semgrep.py
graphsast/web/: __init__.py  server.py
graphsast/web/routes/: findings.py  graph.py  stats.py
graphsast/web/static/: app.js  index.html  style.css
tests/: test_ingestion.py  test_scan.py
tests/fixtures/vulnrez/: app.py
